--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -7,24 +7,19 @@
   button {
     padding: 0 2px;
   }
-  //     width: 250px;
-/*
-  border-style: solid;
-  border-color: grey;
-  border-width: 1px 0px 0px 1px;
-  padding: 0 15px;
-  line-height: 32px;
-*/
+
   .grid-header-cell {
      display: flex;
      justify-content: center;
      width: 100%;
+     align-items: center;
 
     .grid-header-cell-title {
       display: inline-block;
       cursor: default;
       font-size: 13px;
       font-weight: 600;
+      padding-right: 6px;
       //margin: 0 $size-xs 0 0;
 
       overflow: hidden;
@@ -41,7 +36,7 @@
     .grid-header-cell-sort {
       display: flex;
       flex-direction: column;
-      padding-left: 5px;
+      align-items: center;
       cursor: default;
     }
   }
