--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -13,6 +13,7 @@
     cdkDrag iccColumnResize>
     <icc-grid-header-cell
       [column]="column"
+      [gridConfig]="gridConfig"
       (filterGrid)="filterGrid.emit($event)"
       (sortGrid)="sortGrid.emit($event)"
     >
