--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,6 +1,7 @@
 <!--ngrx-grid-display-->
   <ng-container *ngIf="columnConfig$ | async as columns">
     <icc-grid-header
+      [gridConfig]="gridConfig"
       [columnConfig]="columns"
       (filterGrid)="filterGrid.emit($event)"
       (sortGrid)="sortGrid.emit($event)"
