--- a/projects/icc-demo/src/styles.scss
+++ b/projects/icc-demo/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 //@import 'font-awesome/css/font-awesome.css';
-
+@import '@angular/cdk/overlay-prebuilt.css';
 
 .mat-mdc-checkbox {
   --mdc-checkbox-state-layer-size: 16px;
