--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -17,12 +17,17 @@
 
 <ng-container>
 
-  <button icc-button class="grid-header-cell-menu" [iccPopover]="gridColumnMenuComponent" [iccPopoverTrigger]="clickTrigger">
+  <button icc-button class="grid-header-cell-menu" (click)="onClickColumnMenu($event)">
     <i class="fa-solid fa-bars"></i>
   </button>
 
 </ng-container>
 <!--
+
+    <button icc-button class="grid-header-cell-menu" [iccPopover]="gridColumnMenuComponent" [iccPopoverTrigger]="clickTrigger">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+
 
       <button sunButton [sunPopover]="popoverComponentTemplate" sunPopoverTrigger="click">
       Click2
