--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -3,6 +3,11 @@
 <div class="icc-main-container">
   <div class="icc-left-side-bar"> Side Bar
     <mat-checkbox>Checked</mat-checkbox>
+    <div></div>
+
+    <div (click)="enableDialog()"> Enable Dialog</div>
+    <div></div>
+    <div *ngIf="showDialog" (click)="openDialog()">open dialog </div>
   </div>
 
   <div class="icc-center-view">
