--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -6,7 +6,7 @@
 </icc-grid-cell>
 
 <ng-container *ngFor="let column of columns;">
-  <icc-grid-cell>
+  <icc-grid-cell *ngIf="!column.hidden">
     <icc-dynamic-grid-cell
       [record]="record"
       [column]="column">
