--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -6,7 +6,7 @@
 
 
 <ng-container *ngFor="let column of columnConfig; let index = index;">
-  <icc-grid-header-item
+  <icc-grid-header-item *ngIf="!column.hidden"
     [cdkDragDisabled]="dragDisabled"
     (columnResizing)="columnResizing.emit($event)"
     (columnResized)="columnResized.emit($event)"
