--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="icc-main-container">
   <div class="icc-left-side-bar"> Side Bar
-    <mat-checkbox>Checked</mat-checkbox>
+    <icc-checkbox>Checked</icc-checkbox>
     <div></div>
   </div>
 
