--- a/projects/icc/grid/src/components/row-select/row-select.component.html
+++ b/projects/icc/grid/src/components/row-select/row-select.component.html
@@ -1,11 +1,11 @@
 <div>
-  <mat-checkbox
+  <icc-checkbox
     [checked]="isSelected"
     (change)="select()"
-  ></mat-checkbox>
+  ></icc-checkbox>
 
   <!--
-
+<icc-checkbox>Checked</icc-checkbox>
     <ng-container *ngIf="isCheckbox()">
     <input type="checkbox"
            [checked]="isSelected"
