--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -7,10 +7,11 @@
     <i class="fa-solid fa-arrow-down-wide-short"></i>
     Sort DESC
   </button>
-  <div>&#160;</div>
   <ng-container *ngFor="let column of columnConfig; let index = index;">
-    <div (click)="columnHideShow(column)" popoverMenuItem="true">
-      {{getTitle(column)}}
-    </div>
+    <button (click)="columnHideShow(column)" popoverMenuItem="true">
+      <icc-checkbox [checked]="!column.hidden" popoverMenuItem="true">
+        <div popoverMenuItem="true">{{getTitle(column)}}</div>
+      </icc-checkbox>
+    </button>
   </ng-container>
 </ng-container>
