--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 120px;
-  padding: 0 10px;
+  padding: 0; // 10px;
   align-items: left;
 
   button {
-    padding: 0 2px;
+    padding: 0px 10px;
     text-align: left;
   }
 }
