--- a/projects/icc/popover/src/popover.component.scss
+++ b/projects/icc/popover/src/popover.component.scss
@@ -2,6 +2,6 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
   border: 1px solid transparent;
   border-radius: 0.25rem;
-  padding: 0;
+  padding: 0.5rem;
   background: cyan;
 }
