--- a/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  //height: 64px;
   align-items: center;
   justify-content: flex-start;
   position: relative;
