--- a/projects/icc/grid/src/components/grid-header/grid-header.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.scss
@@ -1,8 +1,11 @@
 :host {
   display: flex;
+  //height: 64px;
+  overflow-x: hidden;
 
   //@include display-grid();
   //border-bottom: 2px solid $c_primary;
+
 
   .drag-placeholder {
     //background-color: tint-color($c_primary, 50%);
