--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
@@ -1,8 +1,12 @@
 :host {
+  display: flex;
   width: 100%;
-  //height: 32px;
+  height: 30px;
+  align-items: center;
   border-top: 1px solid grey;
   .icc-text-filter {
+    display: flex;
+    width: 100%;
     padding: 0 10px;
     input {
       width: 100%;
