--- a/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  //height: 64px;
+  height: 100%;
   align-items: center;
   justify-content: flex-start;
   position: relative;
@@ -14,7 +14,7 @@
   border-color: grey;
   border-width: 1px 0px 1px 1px;
   //padding: 0 10px;
-  line-height: 32px;
+ // line-height: 30px;
 
   &.cdk-drag {
     cursor: move;
