--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
@@ -5,7 +5,7 @@
   padding: 0; // 10px;
   align-items: left;
 
-  button {
+  button, .checkbox-label {
     padding: 0px 10px;
     text-align: left;
   }
