--- a/projects/icc/grid/src/components/grid-viewport/grid-viewport.component.html
+++ b/projects/icc/grid/src/components/grid-viewport/grid-viewport.component.html
@@ -3,6 +3,7 @@
   <icc-grid-row *cdkVirtualFor="let record of gridData; let index = index;"
     [gridConfig]="gridConfig"
     [columns]="columns"
+    [columnWidths]="columnWidths"
     [record]="record">
   </icc-grid-row>
 </cdk-virtual-scroll-viewport>
