--- a/projects/icc/grid/src/components/row-select/row-select.component.html
+++ b/projects/icc/grid/src/components/row-select/row-select.component.html
@@ -1,24 +1,6 @@
 <div>
   <icc-checkbox
     [checked]="isSelected"
-    (change)="select()"
-  ></icc-checkbox>
-
-  <!--
-<icc-checkbox>Checked</icc-checkbox>
-    <ng-container *ngIf="isCheckbox()">
-    <input type="checkbox"
-           [checked]="isSelected"
-           (change)="selected.emit()"
-           [id]="inputId"
-           class="data-grid-input"/>
-    <label class="data-grid-label" [for]="inputId"></label>
-  </ng-container>
-  <input *ngIf="isRadio()"
-         type="radio"
-         name="radioSelection"
-         [id]="inputId"
-         [checked]="isSelected"
-         (change)="select()"/>
-           -->
+    (change)="select()">
+  </icc-checkbox>
 </div>
