--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -22,6 +22,7 @@
     >
     </icc-grid-header-cell>
     <icc-column-filter
+      [gridConfig]="gridConfig"
       [column]="column"
     >
     </icc-column-filter>
