--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -12,6 +12,7 @@
     [cdkDragDisabled]="dragDisabled"
     [column]="column"
     [columns]="columns"
+    [gridConfig]="gridConfig"
     (columnResizing)="columnResizing.emit($event)"
     (columnResized)="columnResized.emit($event)"
     cdkDrag iccColumnResize>
