--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="gridConfig$ | async as gridConfig">
-  <ng-container *ngIf="columnConfig$ | async as columns">
+  <ng-container *ngIf="columnsConfig$ | async as columns">
     <div class="icc-grid-toolbar">
       <button (click)="refresh()">
         Refresh
