local and remote columns config

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -9,6 +9,7 @@
   <div class="icc-center-view">
     <icc-grid
       [gridConfig]="gridConfig"
+      [columnsConfig]="columnsConfig"
     >
     </icc-grid>
   </div>
