local and remote data

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -9,7 +9,6 @@
   <div class="icc-center-view">
     <icc-grid
       [gridConfig]="gridConfig"
-      [columnsConfig]="columnsConfig"
     >
     </icc-grid>
   </div>
@@ -19,3 +18,8 @@
 <div class="icc-footer-bar"> Footer Bar
 
 </div>
+
+<!--
+        [columnsConfig]="columnsConfig"
+        [gridData]="gridData"
+-->
