--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -15,6 +15,7 @@
     .icc-left-side-bar {
       width: 250px;
       max-width: 400px;
+      padding-right: 10px;
     }
     .icc-center-view {
       width: 100%;
